♻️ : change some palms

--- a/hello.html
+++ b/hello.html
@@ -1,7 +1,7 @@
 <html>
   <body>
     <h1>KAL chat bot</h1>
-    <div id="edit_area"></div>
+    <div id="res"></div>
     <button id="send">send</button>
     <input type="form" id="req" />
     <script src="popup.js"></script>
