--- a/WebstormProjects/aiForm/index.html
+++ b/WebstormProjects/aiForm/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>チャットフォーム</title>
-    <link rel="stylesheet" href="/public/global.css" />
+    <link rel="stylesheet" href="./public/global.css" />
   </head>
   <body>
     <div class="chat-form-container">
