✨ : add div create and delete functions

--- a/WebstormProjects/aiForm/index.html
+++ b/WebstormProjects/aiForm/index.html
@@ -15,6 +15,7 @@
         <!-- メッセージはここに追加されます -->
       </div>
       <div class="footer">
+        <button id="refresh">refresh</button>
         <input
           type="text"
           class="search-box"
@@ -24,6 +25,6 @@
         <button id="send">send</button>
       </div>
     </div>
-    <script src="../../sendmessage.js"></script>
+    <script src="../aiForm/app/sendmessage.js"></script>
   </body>
 </html>
