change: index.html

--- a/WebstormProjects/aiForm/index.html
+++ b/WebstormProjects/aiForm/index.html
@@ -20,8 +20,10 @@
           class="search-box"
           placeholder="メッセージを入力"
           id="req"
-        />
-        <button id="send">send</button>
+        /> <!--TODO: 改行 -->
+        <button class="button" id="send">
+          <img src="./public/paperplane.png" height="20px">
+        </button>
       </div>
     </div>
     <script src="../../sendmessage.js"></script>
