--- a/WebstormProjects/aiForm/index.html
+++ b/WebstormProjects/aiForm/index.html
@@ -15,7 +15,9 @@
         <!-- メッセージはここに追加されます -->
       </div>
       <div class="footer">
-        <button id="refresh">refresh</button>
+        <button class="button" id="refresh">
+          <img src="./public/trashbox.png" height="20px">
+        </button>
         <input
           type="text"
           class="search-box"
