:art: create icon, border with .message

--- a/WebstormProjects/aiForm/index.html
+++ b/WebstormProjects/aiForm/index.html
@@ -8,7 +8,9 @@
   <body>
     <div class="chat-form-container">
       <div class="header">
-        <div class="status-dot"></div>
+        <div class="status-dot">
+          <img src="./public/kal_logo.png" height=100%>
+        </div>
         <div class="title">Kyutech AI Lab</div>
       </div>
       <div class="messages" id="res">
